# pantheon

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: rfc.md  target_proposal.md
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md  BIOSECURITY.md  COMMENTATOR.md  FINAL_HANDOFF.md  GOVERNANCE.md  LLM_INTEGRATION.md  MCP_TOOLS.md  PHASE0_HANDOFF.md  PUBLISHING.md  ROADMAP.md  SEASONS.md  VALIDATION.md  VISUALIZATION.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/public/: round.json
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/components/: AffinityChart.tsx  BroadcastFooter.tsx  CandidateList.tsx  CommentatorPanel.tsx  EventTicker.tsx  MissionStressTest.tsx  MolstarViewer.tsx  PerturbationDrawer.tsx  PerturbationEffect.tsx  PlayerCard.tsx  PlayerPanel.tsx  ReasoningTimeline.tsx  ResidueInfoCard.tsx  ScaleDolly.tsx  ShortcutSheet.tsx  Sparkline.tsx  StatusPill.tsx  StressTestPanel.tsx  StructurePanel.tsx  ToastProvider.tsx  ToolIcons.tsx  ToolTimeline.tsx  Toolbox.tsx  TopBar.tsx  ViewerControls.tsx
frontend/src/data/: useLiveRound.ts  useRound.ts
frontend/src/hooks/: useKeyboard.ts
frontend/src/pages/: BroadcastPage.tsx  FullscreenViewerPage.tsx  OverviewPage.tsx  PlayerDetailPage.tsx
frontend/src/theme/: tokens.css
scripts/: README.md  build_demo_round.py
scripts/uiwalk/: package-lock.json  package.json  walk.mjs
seasons/S0_streptavidin/: config.yaml
src/pantheon/: __init__.py
src/pantheon/adapters/: __init__.py  (+3 more)
tests/: test_adapters.py  test_cli_adapters.py  test_defaults.py  test_frontend_bridge.py  test_gpu_contracts.py  test_publish.py  test_research_brief.py  test_round.py  test_scoring.py  test_stream.py  test_target.py  test_tool_cache.py  test_tool_loop.py  test_tool_real.py  test_tool_registry.py  test_tool_stubs.py  test_wetlab.py
(+35 files in other folders)
