[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pantheon"
version = "0.0.1"
description = "AI-vs-AI arena for protein and molecule design with wet-lab validation and open-science publishing."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Temur" }]
dependencies = [
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]
# Real chemistry: `pip install -e .[science]` activates rdkit descriptors +
# Ertl SA score in tools/real/rdkit_real.py. Kept optional so the core install
# and the zero-heavy-dep CI test suite stay lean (rdkit falls back to the stub).
science = [
  "rdkit>=2024.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pantheon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
